# tutorial-finetune-LLM

./: .gitignore  LICENSE  README.md  finetune_inst.py  instruction_finetune.ipynb  instruction_finetune_cpu.ipynb  pyproject.toml  requirements.txt  text_generation.ipynb  text_generation_cpu.ipynb
