[project]
name = ""
version = ""
description = ""
authors = [
    {name = "hei.chtai", email = "nooobkevin@gmail.com"},
]
dependencies = [
    "torch>=2.1.2",
    "transformers>=4.36.2",
    "ipykernel>=6.28.0",
    "pip>=23.3.2",
    "einop>=0.0.1",
    "peft>=0.7.1",
    "datasets>=2.16.1",
    "bitsandbytes>=0.41.3.post2",
    "accelerate>=0.25.0",
    "scipy>=1.11.4",
    "setuptools>=69.0.3",
    "tensorboard>=2.15.1",
]
requires-python = ">=3.9,<3.10"
readme = "README.md"
license = {text = "MIT"}

